Add main class and CLI support.